# Mentorion

./: .gitignore  AGENTS.md  DEV_NOTES.md  DevNotes.md  README.md  TODO.md  main.py  requirements-dev.txt  requirements.txt  setup.cfg
Streamlit/: DevNotes.md  Home.py  README.md  app.py  example_note1.json  example_note2.json
Streamlit/core/: config.py
Streamlit/notes/: example.json
Streamlit/pages/: Notes.py
backend/: DEV_NOTES.md  DevNotes.md  README.md  main.py  requirements.txt
backend/api/v1/: dependencies.py  routes.py
backend/app/: main.py
backend/app/core/: ai_client.py  config.py  logger.py  request_throttler.py  requrest_throttler.py
backend/app/db/: DevNotes.md  README.md  dependency.py  models.py  session.py
backend/app/domain/: agent.py  scraper.py
backend/app/schemas/: error.py  note.py
backend/app/services/: note_service.py
backend/app/tests/: test_agent.py  test_api.py  test_scraper.py
backend/core/: ai_client.py  config.py  logger.py  rate_limiter.py  requrest_throttler.py
backend/data/: app.db
backend/domain/: agent.py  scraper.py
backend/schemas/: note.py  question.py  scraper.py
backend/services/: note_service.py
backend/src/: agent.py  rate_limiter.py  scraper.py
docs/: api.md  architecture.md  collaboration.md  dev-notes.md  doc-map.md  review-journal.md  review-mode.md
examples/: demo_scrape_and_qa.py
frontend/: DevNotes.md  README.md  package-lock.json  package.json
frontend/src/: App.jsx
src/: agent.py  config.py  rate_limiter.py  schema.py  scraper.py
tests/: test_agent.py  test_scraper.py
(+5 files in other folders)
