[metadata]
name = mentorion
version = 0.1.0

[options]
packages = find:
python_requires = >=3.9
install_requires =
  fastapi==0.128.0
  pydantic>=2.0.0
  requests>=2.25.0
  python-dotenv>=1.0.0
  beautifulsoup4>=4.9.0
  SQLAlchemy==2.0.20
  google-genai>=0.1.0
  openai>=1.0.0

[options.extras_require]
dev =
  pytest
  pytest-mock
  pytest-asyncio
  uvicorn
streamlit =
  streamlit

[options.packages.find]
include =
  backend*
